// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Checkbox 1`] = `
.c3 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
}

.c3[type='checkbox'],
.c3[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c3[type='number']::-webkit-inner-spin-button,
.c3[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c3[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c3[type='search']::-webkit-search-cancel-button,
.c3[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c2 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  display: none;
}

.c2:checked + label::after {
  opacity: 1;
}

.c2:selected + label::after {
  opacity: 1;
}

.c2:checked + label {
  border-color: rgb(59,70,204);
}

.c2:selected + label {
  border-color: rgb(59,70,204);
}

.c2:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c4 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c4::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c1 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c5 label {
  font-weight: normal;
  font-size: 0.9375rem;
}

.c0 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  height: 1.5rem;
}

.c0 label {
  font-weight: 400;
}

.c0 label::after {
  width: 0.475rem;
  height: 0.205rem;
  top: 0.4125rem;
  left: 0.35rem;
}

.c0 div[type='checkbox'],
.c0 div[type='checkbox'] input,
.c0 div[type='checkbox'] label {
  height: 1.5rem;
  width: 1.5rem;
}

.c7 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
}

.c6 {
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
}

<li
  className="c0"
>
  <div
    checked={false}
    className="c1"
    disabled={false}
    id=""
    onBlur={undefined}
    type="checkbox"
  >
    <input
      checked={false}
      className="c2 c3"
      disabled={false}
      id="k"
      onBlur={undefined}
      type="checkbox"
    />
    <label
      className="c4"
      htmlFor="k"
    />
  </div>
  <div
    checked={false}
    className="c5"
    disabled={false}
    id=""
    onBlur={undefined}
  >
    <label
      className="c6 c7"
      htmlFor="k"
    >
      Detailed explanations
    </label>
  </div>
</li>
`;

exports[`Form Fieldset 1`] = `
.c0 {
  display: inline-block;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

<div
  className="c0"
  role="group"
>
  Detailed explanations
</div>
`;

exports[`Form FormLabel 1`] = `
.c1 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
}

.c0 {
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
}

<label
  className="c0 c1"
  htmlFor=""
>
  Detailed explanations
</label>
`;

exports[`Form FormMeta 1`] = `
.c1 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
}

.c0 {
  float: right;
  color: rgb(210,67,58);
  -webkit-text-fill-color: currentcolor;
  font-size: 0.8125rem;
  float: none;
  width: 18.75rem;
}

.c2 {
  float: right;
  color: rgb(227,130,0);
  -webkit-text-fill-color: currentcolor;
  font-size: 0.8125rem;
  float: none;
  width: 18.75rem;
}

.c3 {
  float: right;
  color: rgb(0,152,88);
  -webkit-text-fill-color: currentcolor;
  font-size: 0.8125rem;
  float: none;
  width: 18.75rem;
}

<div>
  <label
    className="c0 c1"
  >
    Unexpected children error!
  </label>
  <label
    className="c2 c1"
  >
    Unexpected children warning!
  </label>
  <label
    className="c3 c1"
  >
    Unexpected children success!
  </label>
</div>
`;

exports[`Form Input 1`] = `
.c0 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  padding: 0.8125rem 0.75rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgb(73,73,73);
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  max-width: 22.1875rem;
  text-overflow: ellipsis;
}

.c0:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c0::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c0::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c0:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c0:invalid {
  box-shadow: none;
}

.c0:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c0:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c0:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c0:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

<input
  className="c0"
  disabled={false}
  id=""
  onBlur={undefined}
  placeholder="Example: JarJarBinks"
/>
`;

exports[`Form Legend 1`] = `
.c1 {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

.c0 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 600;
}

<legend
  className="c0 c1"
>
  I am the legend 
</legend>
`;

exports[`Form Radio 1`] = `
.c3 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
}

.c3[type='checkbox'],
.c3[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c3[type='number']::-webkit-inner-spin-button,
.c3[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c3[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c3[type='search']::-webkit-search-cancel-button,
.c3[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c2 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  display: none;
}

.c2:checked + label::after {
  opacity: 1;
}

.c2:selected + label::after {
  opacity: 1;
}

.c2:checked + label {
  border-color: rgb(59,70,204);
}

.c2:selected + label {
  border-color: rgb(59,70,204);
}

.c2:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c4 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  width: 1.125rem;
  height: 1.125rem;
  border-radius: 50%;
}

.c4::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.375rem;
  border-radius: 50%;
  background-color: rgb(73,73,73);
  top: 50%;
  left: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}

.c1 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c5 label {
  font-weight: normal;
  font-size: 0.9375rem;
}

.c7 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
}

.c6 {
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
}

.c0 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<li
  className="c0"
  disabled={false}
  onBlur={undefined}
>
  <div
    className="c1"
    disabled={false}
    id=""
    onBlur={undefined}
    type="radio"
  >
    <input
      checked={undefined}
      className="c2 c3"
      disabled={false}
      id="l"
      onBlur={undefined}
      type="radio"
    />
    <label
      className="c4"
      htmlFor="l"
    />
  </div>
  <div
    className="c5"
    disabled={false}
    id=""
    onBlur={undefined}
  >
    <label
      className="c6 c7"
      htmlFor="l"
    >
      Detailed explanations
    </label>
  </div>
</li>
`;

exports[`Form Select 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
  max-width: 100%;
  min-width: 18.75rem;
}

.c0:after {
  content: '';
  width: 0.625rem;
  height: 0.625rem;
  background: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iOSIgaGVpZ2h0PSI2IiB2aWV3Qm94PSIwIDAgOSA2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjx0aXRsZT5hcnJvdzogcmlnaHQ8L3RpdGxlPjxwYXRoIGQ9Ik05IDEuMzg2TDcuNjQ4IDAgNC41IDMuMjI4IDEuMzUyIDAgMCAxLjM4NiA0LjUgNnoiIGZpbGw9IiM0OTQ5NDkiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg==) center center no-repeat;
  display: block;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 0.75rem;
  pointer-events: none;
}

.c2 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  padding: 0.8125rem 0.75rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgb(73,73,73);
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  max-width: 22.1875rem;
  text-overflow: ellipsis;
}

.c2:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c2::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c2::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c2:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c2:invalid {
  box-shadow: none;
}

.c2:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c2:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c2:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c2:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c1 {
  position: relative;
  padding: 0.75rem;
  padding-right: 1.5625rem;
}

.c1::-ms-expand {
  display: none;
}

<div
  className="c0"
  disabled={false}
>
  <select
    className="c1 c2"
    disabled={false}
    id=""
    onBlur={undefined}
  >
    <option
      disabled={true}
      selected={true}
    >
      Select a datacenter
    </option>
    <option>
      Amsterdam, EU
    </option>
    <option>
      San Francisco, USA
    </option>
    <option>
      Seoul, South Korea
    </option>
    <option>
      Tokyo, Japan
    </option>
  </select>
</div>
`;

exports[`Form Textarea 1`] = `
.c1 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 12rem;
  min-height: 12rem;
  padding: 0.8125rem 0.75rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgb(73,73,73);
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  max-width: 22.1875rem;
  text-overflow: ellipsis;
}

.c1:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c1::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c1::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c1:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c1:invalid {
  box-shadow: none;
}

.c1:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c1:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c1:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c1:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<textarea
  className="c0 c1"
  disabled={false}
  id=""
  onBlur={undefined}
/>
`;

exports[`Form Toggle 1`] = `
.c0 {
  display: inline-block;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c5 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
}

.c4 {
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
  color: rgb(216,216,216);
}

.c1 {
  position: relative;
  vertical-align: text-bottom;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: none;
}

.c2:checked + label {
  background: #3B46CC;
  border: 0.0625rem solid rgb(59,70,204);
}

.c2:checked + label:after {
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  box-shadow: 0 0 0 0.0625rem rgb(59,70,204);
}

.c2:checked + label:active {
  box-shadow: none;
}

.c2:checked + label {
  background: rgb(250,250,250);
  border: 0.0625rem solid rgb(216,216,216);
}

.c2:checked + label:after {
  box-shadow: 0 0 0 0.0625rem rgb(216,216,216);
}

.c3 {
  outline: 0;
  display: block;
  width: 2.875rem;
  height: 1.5rem;
  position: relative;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-sizing: border-box;
  background: rgb(250,250,250);
  border-radius: 1.4375rem;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: not-allowed;
}

.c3::selection {
  background: none;
}

.c3:active {
  box-shadow: inset 0 0 0 1.5rem rgb(216,216,216);
}

.c3:hover {
  border: 0.0625rem solid rgb(59,70,204);
}

.c3:hover:after {
  box-shadow: 0 0 0 0.0625rem rgb(59,70,204);
}

.c3:after,
.c3:before {
  position: relative;
  display: block;
  content: '';
  width: 50%;
  height: 100%;
}

.c3:after {
  -webkit-transform: translateX(0%);
  -ms-transform: translateX(0%);
  transform: translateX(0%);
  border-radius: 50%;
  background: rgb(255,255,255);
  -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.175,0.885,0.32,1.275);
  -webkit-transition: transform 0.3s cubic-bezier(0.175,0.885,0.32,1.275);
  transition: transform 0.3s cubic-bezier(0.175,0.885,0.32,1.275);
  box-shadow: 0 0 0 0.0625rem rgb(216,216,216);
}

.c3:active {
  box-shadow: inset 0 0 0 2em rgb(216,216,216);
}

.c3:before {
  display: none;
}

.c3:active {
  box-shadow: none;
}

.c3:active:after {
  padding-right: 0;
}

.c3:before {
  cursor: not-allowed;
}

.c3:after {
  cursor: not-allowed;
  background: rgb(230,230,230);
}

.c3:hover {
  border: 0.0625rem solid rgb(216,216,216);
}

.c3:hover:after {
  box-shadow: 0 0 0 0.0625rem rgb(216,216,216);
}

<div
  className="c0"
  disabled={true}
  name="who-killed-2"
  role="group"
  style={undefined}
>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={true}
      id="m"
      onBlur={undefined}
      type="checkbox"
      value="video"
    />
    <label
      className="c3"
      disabled={true}
      htmlFor="m"
      id="m"
      onBlur={undefined}
      value="video"
    />
    <label
      className="c4 c5"
      disabled={true}
      htmlFor="m"
      id="m"
      onBlur={undefined}
      value="video"
    >
       
      Video
    </label>
  </div>
</div>
`;
